Use "valueOf" instead of "new"